Working links between nested modules

--- a/static/module.css
+++ b/static/module.css
@@ -183,7 +183,7 @@ button#tocToggle {
   padding: .2em;
 }
 
-span.id.highlight, .heading.highlight {
+.highlight {
   background-color: #e6e6e6;
   cursor: pointer;
 }
